--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,6 @@
 .home-content {
-  width: 100%;
-  height: 100vh;
+  max-width: 100%;
+  min-height: 100vh;
   padding-top: 70px;
   display: flex;
   align-items: center;
