--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,6 +3,11 @@
   text-align: center;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-    padding: 0px 20px;
+  justify-content: center;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.footer a {
+  padding: 7px;
 }
