--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,20 @@ button:focus {
 pre {
   margin: 20px 0px 30px 0px !important;
 }
+
+input {
+  display: block;
+  width: 100%;
+  margin: auto;
+  height: 45px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1.2px solid #ddd;
+  border-radius: 2px;
+  margin: 20px 3px;
+  font-size: 20px;
+}
