--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body, html {
 
 p {
   font-size: 18px;
+  line-height: 34px;
 }
 
 * {
@@ -46,4 +47,9 @@ input {
   border-radius: 2px;
   margin: 20px 3px;
   font-size: 20px;
+}
+
+.link-list {
+  width: 100%;
+  overflow-x: scroll;
 }
